# mcp-k8s-agent

./: .gitignore  ARCHITECTURE.md  README.md  gate.py  k8s_resource.py  phase1_end.md  pyproject.toml  sanitize.py  server.py  tools_read.py  tools_write.py
docs/: ARCHITECTURE.md  PHASE1_READ_DESIGN.md  PHASE2_DC.md  phase2_end.md
mcp_k8s_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: phase1_smoke_test.py  phase2_smoke_test.py  smoke_mcp_client.py  test_client.py  test_sanitize.py
