[project]
name = "mcp-k8s-agent"
version = "0.2.0"
description = "MCP server exposing safe, policy-gated Kubernetes operations (read + approved delete)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "mcp>=1.25.0",
  "kubernetes>=29.0.0",
]

[project.urls]
Homepage = "https://github.com/rv2023/mcp-k8s-agent"
Repository = "https://github.com/rv2023/mcp-k8s-agent"

[tool.setuptools]
py-modules = [
  "server",
  "gate",
  "tools_read",
  "tools_write",
  "sanitize",
  "k8s_resource",
]